fix QR layout issue

--- a/packages/ui/src/styles/index.css
+++ b/packages/ui/src/styles/index.css
@@ -143,6 +143,14 @@ button.fcl__btn-primary svg,
 	padding-block-end: 0.25em;
 }
 
+.fcl__text-secondary {
+	font-size: .9em;
+	font-weight: 400;
+	margin: 0;
+	padding-block-start: 1.25em;
+	padding-block-end: 0.25em;
+}
+
 .fcl__subhead {
 	opacity: 0.7; /* hacky... _/(:/)\_ */
 	font-size: 0.9em;
